BZ: avoid shifting info icon
Display it only once the link has been translated!

--- a/css/bz.css
+++ b/css/bz.css
@@ -24,6 +24,9 @@
 	display: grid;
 	place-items: center;
 }
+#bz-info-sign {
+	visibility: hidden;
+}
 [data-status="on"] {
 	color: var(--green);
 }
